// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post card should render correctly post with featured image 1`] = `
<Link
  replace={false}
  to="/post/mock-slug/1"
>
  <Item
    className="posts"
  >
    <ItemHeader>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Mock title",
          }
        }
      />
    </ItemHeader>
    <ItemContent>
      <div
        className="image"
        style={
          Object {
            "backgroundImage": "url(undefined)",
          }
        }
      />
      <ItemDescription
        dangerouslySetInnerHTML={
          Object {
            "__html": "Some mock exceprt to be rendered",
          }
        }
      />
    </ItemContent>
  </Item>
</Link>
`;

exports[`Post card should render correctly post with placeholder image 1`] = `
<Link
  replace={false}
  to="/post/mock-slug/1"
>
  <Item
    className="posts"
  >
    <ItemHeader>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Mock title",
          }
        }
      />
    </ItemHeader>
    <ItemContent>
      <div
        className="image"
        style={
          Object {
            "backgroundImage": "url(http://via.placeholder.com/177x119)",
          }
        }
      />
      <ItemDescription
        dangerouslySetInnerHTML={
          Object {
            "__html": "Some mock exceprt to be rendered",
          }
        }
      />
    </ItemContent>
  </Item>
</Link>
`;
